# orbit

./: .gitignore  .rustfmt.toml  .taplo.toml  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Cargo.toml  LICENSE-MIT  README.md  makefile  merge.md  orbit.code-workspace  package-lock.json  package.json  rmk.code-workspace
.dev/docker/: Dockerfile  docker-compose.yml  docker_publish.sh
.dev/docs/: .gitignore  configuration.md  getting-started.md  index.md  keymaps.md
.dev/keycodes/: dvorak_fr.k  italian.k  us_international.k
.dev/scripts/: compile.rs  setup.rs
.github/workflows/: build.yml  docs.yml
_dev/docs/: getting-started.md  keymaps.md  package.json
chips/__mock/: Cargo.toml  README.md
chips/_emulator/: Cargo.toml  README.md
chips/other_chip/: Cargo.toml
chips/stm32f303cbtx/: Cargo.toml  Embed.toml
chips/stm32f411ceu/: Cargo.toml  Embed.toml
definitions/keyboards/: feb42.toml
dev/: Dockerfile  build.sh  build_firmware.sh  compile.sh  docker-compose.yml  firmware_build.sh  flash.sh
docker/: Dockerfile  publish.sh
docs/: _keycodes.mts  _pages.mts  actions.md  behaviors.md  building.md  concepts.md  configuration.md  getting-started.md  index.md  keycodes.md  keymap.md  keymaps.md  package-lock.json  roadmap.md
docs/.vitepress/: config.mts  keycodes.mts
docs/actions/: layers.md  modifiers.md
docs/behaviors/: hold.md  modify.md  os.md  press.md  tap.md
docs/keycodes/: french.md  german.md  spanish.md  swedish.md  uk.md  us.md
docs/tools/: keycodes.mjs  (+1 more)
keyboards/: __mock.toml  _emulator.toml  devboard.toml  feb42.toml
keycodes/: Cargo.toml  belgian.k  bepo.k  canadian_multilingual.k  colemak.k  czech_mac_iso.k  french.k  german.k  hungarian.k  plover_dvorak.k  spanish.k  turkish_f.k  uk.k  us.k  workman_zxcvm.k
orbit/: Cargo.toml  build.rs  keyboard_defaults.toml  orbit.tmLanguage.json
orbit-macros/: Cargo.toml
orbit-macros/src/: lib.rs  toml.rs  util.rs
orbit-macros/src/generators/: config.rs  keycodes.rs  peripherals.rs
orbit-macros/src/generators/peripherals/: emulator.rs  stm32.rs
orbit/chips/_emulator/: Cargo.toml
orbit/chips/_emulator/src/: main.rs
orbit/chips/stm32f303cbt/: Cargo.toml  rust-toolchain.toml
orbit/chips/stm32f303cbt/.cargo/: config.toml
orbit/chips/stm32f303cbt/src/: main.rs
orbit/chips/stm32f411ceu/: Cargo.toml
orbit/chips/stm32f411ceu-16mhz-internal/: Cargo.toml  Embed.toml  build.rs
orbit/chips/stm32f411ceu-16mhz-internal/src/: main.rs
orbit/chips/stm32f411ceu/.cargo/: config.toml
orbit/chips/stm32f411ceu/src/: example_usb.rs  handlers.rs  main.rs  main_real.rs  usb_example.rs
orbit/dev/docker/: docker-compose.yml
orbit/dev/docs/: index.md
orbit/dev/docs/keycodes/: german.md
orbit/dev/docs/public/: browserconfig.xml
orbit/dev/docs/tools/: keycodes.mjs
orbit/dev/tooling/: dependencies.rs  generate.rs  prepare.rs  util.rs
orbit/dev/tooling/generate/: config.rs  peripherals.rs
orbit/dev/tooling/generate/peripherals/: emulator.rs  stm32.rs
orbit/dev/tools/prepare/: __main.rs  generate.rs  prepare.rs
orbit/dev/tools/prepare/generate/: keycodes.rs  modules.rs  peripherals.rs
orbit/dev/tools/prepare/generate/peripherals/: emulator.rs  stm32.rs
orbit/keyboards/: _emulator.toml  devboard.toml  feb42.toml
orbit/keycodes/: farsi.k  french.kcs  german.k  german.kcs  nordic.k  russian.k  russian_typewriter.kcs  swedish.kcs  uk.kcs  us.k  us.kcs
orbit/macros/src/: generators.rs  toml.rs
orbit/macros/src/generators/: config.rs  keycodes.rs  peripherals.rs
orbit/macros/src/generators/peripherals/: stm32.rs
orbit/orbit/: rust-toolchain.toml
orbit/orbit-macros/src/generators/: config.rs
orbit/orbit/src/: key.rs  keyboard.rs  keymap.rs  log.rs  process.rs  time.rs
orbit/orbit/src/features/: actions.rs  flavors.rs
orbit/orbit/src/features/behaviors/: tap.rs
orbit/src/: actions.rs  behaviors.rs  event.rs  features.rs  key.rs  keyboard.rs  keymap.rs  lib.rs  log.rs  orbit.rs  peripherals.rs  process.rs  processor.rs  storage.rs  time.rs
orbit/src/behaviors/: hold.rs  press.rs  tap.rs
orbit/src/features/: actions.rs  behaviors.rs
orbit/src/orbit/: config.rs  dbg.rs  emulator.rs  handlers.rs  hid.rs  key.rs  key_analog.rs  keyboard.rs  keycodes.rs  keymap.rs  lib.rs  modifiers.rs  peripherals.rs  process.rs  report.rs  storage.rs  time.rs
orbit/src/orbit/features/: actions.rs  flavors.rs
orbit/src/orbit/features/behaviors/: hold.rs  tap.rs
orbit/src/orbit/hid/: builder.rs  flash.rs  keyboard.rs
orbit/src/processor/: emulator.rs
rmk/: .gitignore  Cargo.toml  build.rs
rmk/chips/stm32f303cb/: Cargo.toml
rmk/chips/stm32f303cb/src/: fmt.rs
rmk/chips/stm32f303cbtx/: Cargo.toml
rmk/chips/stm32f303cbtx/src/: main.rs
rmk/core/: Cargo.toml
rmk/core/macros/src/: config.rs  lib.rs
rmk/core/macros/src/config/: config.rs  parser.rs  read.rs
rmk/core/macros/src/keycodes/: parser.rs  read.rs
rmk/core/src/: behaviors.rs  config.rs  keyboard.rs  keymap.rs  pinout.rs  rmk.rs
rmk/firmware/: Cargo.toml
rmk/firmware/src/: debounce.rs  features.rs  flashdrive.rs  flow.rs  key.rs  keyboard.rs  keycodes.rs  keymap.rs  lib.rs  time.rs  usb.rs
rmk/keyboards/: feb42.toml
rmk/keycodes/: Cargo.toml  canadian_french.k  german.k  irish.k  norman.k  plover.k
rmk/keycodes/src/: lib.rs
rmk/macros/: Cargo.toml  build.rs
rmk/macros/src/: _macros.rs  config.rs  keycodes.rs  lib.rs  parser.rs  pinout.rs  read.rs
rmk/macros/src/config/: config.rs  read.rs
rmk/macros/src/keycodes/: parser.rs  read.rs
rmk/src/: actions.rs  behaviors.rs  chip.rs  config.rs  debounce.rs  features.rs  flashdrive.rs  key.rs  keyboard.rs  keycodes.rs  keymap.rs  lib.rs  main.rs  modifiers.rs  pinout.rs  processor.rs  rmk.rs  time.rs
rmk/src/macros/src/: _macros.rs
rmk/src/macros/src/config/: parser.rs
rmk/src/macros/src/keycodes/: read.rs
rmk/src/rmk/: behaviors.rs  keymap.rs
rmk/src/rmk/keycodes/: czech_mac_ansi.k  french_afnor.k  serbian.k
rmk_macros/: Cargo.toml
src/: rmk.rs
user/: README.md  config.toml  config.yml  keyboard.toml  keymap.rmk
webconfig/: README.md
(+137 files in other folders)
