[workspace]
resolver = "2"
members = [
  "rmk/firmware",
  "rmk/keycodes",
  "keyboards/keyboard_a",
  "keyboards/keyboard_b",
  "keyboards/keyboard_c",
  "keyboards/keyboard_d",
  "keyboards/keyboard_e",
  "keyboards/keyboard_f",
]

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
