[package]
name = "orbit-macros"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
prettyplease = "0.2"
darling = "0.20"
once_cell = "1.19"
cargo_toml = "0.20"
serde-toml-merge = "0.3.8"

[features]
chip_type_none = []
chip_type_emulator = []
chip_type_stm32 = []
chip_type_nrf = []
chip_type_esp = []
chip_type_rp = []
chip_type_chw = []
default = []

[lib]
proc-macro = true