[package]
name = "orbit"
version = "1.0.0"
description = "Rust Keyboard Firmware"
authors = ["yesitsfebreeze"]
repository = "https://github.com/orbit-firmware/orbit"
publish = false
edition = "2021"

[dependencies]
embassy-usb = { version = "0.3", features = [
  "defmt",
  "usbd-hid",
  "max-interface-count-8",
  "max-handler-count-8",
] }
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }

[features]
mock_enabled = []
defmt = []
