[package]
name = "orbit"
version = "1.0.0"
description = "Rust Keyboard Firmware"
authors = ["yesitsfebreeze"]
repository = "https://github.com/orbit-firmware/orbit"
publish = false
edition = "2021"

[dependencies]
heapless = "0.8"
embedded-hal = "1.0"
embassy-usb = { version = "0.3", features = [
  "defmt",
  "usbd-hid",
  "max-interface-count-8",
  "max-handler-count-8",
] }
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }

[features]
defmt = []

[profile.release.package."*"]
opt-level = "z"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
