[package]
name = "rmk"
version = "0.1.0"
description = "Rust Keyboard Firmware"
authors = ["yesitsfebreeze"]
repository = "https://github.com/rmk-firmware/rmk"
publish = false
edition = "2021"

[dependencies]
keycodes = { path = "../keycodes" }

[features]
default = ["us_keycodes"]

# features
disable_combo_feature = []
disable_hold_feature = []
disable_modify_feature = []
disable_mouse_feature = []

# keycodes
belgian_keycodes = []
bepo_keycodes = []
brazilian_abnt2_keycodes = []
canadian_french_keycodes = []
canadian_multilingual_keycodes = []
colemak_keycodes = []
core_keycodes = []
croatian_keycodes = []
czech_mac_ansi_keycodes = []
czech_mac_iso_keycodes = []
czech_keycodes = []
danish_keycodes = []
dvorak_fr_keycodes = []
dvorak_programmer_keycodes = []
dvorak_keycodes = []
estonian_keycodes = []
farsi_keycodes = []
finnish_keycodes = []
french_afnor_keycodes = []
french_mac_iso_keycodes = []
french_keycodes = []
german_mac_iso_keycodes = []
german_mac_keycodes = []
german_keycodes = []
greek_keycodes = []
hebrew_keycodes = []
hungarian_keycodes = []
icelandic_keycodes = []
irish_keycodes = []
italian_mac_ansi_keycodes = []
italian_mac_iso_keycodes = []
italian_keycodes = []
japanese_keycodes = []
korean_keycodes = []
latvian_keycodes = []
lithuanian_azerty_keycodes = []
lithuanian_qwerty_keycodes = []
modifiers_keycodes = []
neo2_keycodes = []
nordic_keycodes = []
norman_keycodes = []
norwegian_keycodes = []
plover_dvorak_keycodes = []
plover_keycodes = []
polish_keycodes = []
portuguese_mac_iso_keycodes = []
portuguese_keycodes = []
romanian_keycodes = []
russian_typewriter_keycodes = []
russian_keycodes = []
serbian_latin_keycodes = []
serbian_keycodes = []
slovak_keycodes = []
slovenian_keycodes = []
spanish_dvorak_keycodes = []
spanish_latin_america_keycodes = []
spanish_keycodes = []
swedish_mac_ansi_keycodes = []
swedish_mac_iso_keycodes = []
swedish_pro_mac_ansi_keycodes = []
swedish_pro_mac_iso_keycodes = []
swedish_keycodes = []
swiss_french_keycodes = []
swiss_german_keycodes = []
turkish_f_keycodes = []
turkish_q_keycodes = []
uk_keycodes = []
ukrainian_keycodes = []
us_extended_keycodes = []
us_international_linux_keycodes = []
us_international_keycodes = []
us_keycodes = []
workman_zxcvm_keycodes = []
workman_keycodes = []
