[package]
name = "rmk"
version = "1.0.0"
description = "Rust Keyboard Firmware"
authors = ["yesitsfebreeze"]
repository = "https://github.com/rmk-firmware/rmk"
publish = false
edition = "2021"

[dependencies]
embassy-usb = { version = "0.3", features = [
  "defmt",
  "usbd-hid",
  "max-interface-count-8",
  "max-handler-count-8",
] }


[features]

# features
disable_combo_feature = []
disable_hold_feature = []
disable_modify_feature = []
disable_mouse_feature = []
