[package]
name = "rmk"
version = "1.0.0"
description = "Rust Keyboard Firmware"
authors = ["yesitsfebreeze"]
repository = "https://github.com/rmk-firmware/rmk"
publish = false
edition = "2021"

[lib]
name = "rmk"
path = "src/rmk.rs"

[dependencies]
macros = { path = "../macros" }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = [
    "defmt-03",
], optional = true }
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
embassy-usb = { version = "0.3", features = [
  "defmt",
  "usbd-hid",
  "max-interface-count-8",
  "max-handler-count-8",
] }

[features]
default = ["keycodes_us"]

# chips
# chip_stm32f303cb = []

# features
disable_combo_feature = []
disable_hold_feature = []
disable_modify_feature = []
disable_mouse_feature = []

# keycodes
keycodes_belgian = []
keycodes_bepo = []
keycodes_brazilian_abnt2 = []
keycodes_canadian_french = []
keycodes_canadian_multilingual = []
keycodes_colemak = []
keycodes_core = []
keycodes_croatian = []
keycodes_czech_mac_ansi = []
keycodes_czech_mac_iso = []
keycodes_czech = []
keycodes_danish = []
keycodes_dvorak_fr = []
keycodes_dvorak_programmer = []
keycodes_dvorak = []
keycodes_estonian = []
keycodes_farsi = []
keycodes_finnish = []
keycodes_french_afnor = []
keycodes_french_mac_iso = []
keycodes_french = []
keycodes_german_mac_iso = []
keycodes_german_mac = []
keycodes_german = []
keycodes_greek = []
keycodes_hebrew = []
keycodes_hungarian = []
keycodes_icelandic = []
keycodes_irish = []
keycodes_italian_mac_ansi = []
keycodes_italian_mac_iso = []
keycodes_italian = []
keycodes_japanese = []
keycodes_korean = []
keycodes_latvian = []
keycodes_lithuanian_azerty = []
keycodes_lithuanian_qwerty = []
keycodes_modifiers = []
keycodes_neo2 = []
keycodes_nordic = []
keycodes_norman = []
keycodes_norwegian = []
keycodes_plover_dvorak = []
keycodes_plover = []
keycodes_polish = []
keycodes_portuguese_mac_iso = []
keycodes_portuguese = []
keycodes_romanian = []
keycodes_russian_typewriter = []
keycodes_russian = []
keycodes_serbian_latin = []
keycodes_serbian = []
keycodes_slovak = []
keycodes_slovenian = []
keycodes_spanish_dvorak = []
keycodes_spanish_latin_america = []
keycodes_spanish = []
keycodes_swedish_mac_ansi = []
keycodes_swedish_mac_iso = []
keycodes_swedish_pro_mac_ansi = []
keycodes_swedish_pro_mac_iso = []
keycodes_swedish = []
keycodes_swiss_french = []
keycodes_swiss_german = []
keycodes_turkish_f = []
keycodes_turkish_q = []
keycodes_uk = []
keycodes_ukrainian = []
keycodes_us_extended = []
keycodes_us_international_linux = []
keycodes_us_international = []
keycodes_us = []
keycodes_workman_zxcvm = []
keycodes_workman = []
