[package]
name = "rmk"
version = "0.1.0"
description = "Rust Keyboard Firmware"
authors = ["yesitsfebreeze"]
repository = "https://github.com/rmk-firmware/rmk"
publish = false
edition = "2021"

[features]
combo_on = []  # will be toggled on when present in keymap
hold_on = []   # will be toggled on when present in keymap
modify_on = [] # will be toggled on when present in keymap
mouse_on = []  # will be toggled on when present in keymap
