[package]
name = "stm32f411ceu6"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-executor = { version = "0.6.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "integrated-timers",
] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = [
  "memory-x",
  "stm32f411ce",
  "time-driver-any",
  "exti",
  "unstable-pac",
] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }
static_cell = "2"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = []
debug = [
  "defmt",
  "defmt-rtt",
  "panic-probe",
  "embassy-executor/defmt",
  "embassy-sync/defmt",
  "embassy-futures/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embassy-stm32/defmt",
]
